--- a/index.html
+++ b/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- main css -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <!-- header part start -->
+    <header>
+        <div class="container">
+            <div class="header-content">
+                <div class="header-logo">
+                    <h4><a href="#">Hasibur.B</a></h4>
+                </div>
+                <div class="header-button">
+                    <button>Download Resume</button>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
