--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <div class="header-content">
                 <div class="header-logo">
-                    <h4><a href="#">Hasibur.B</a></h4>
+                    <a href="#">Hasibur.B</a>
                 </div>
                 <div class="header-button">
                     <button>Download Resume</button>
@@ -21,5 +21,23 @@
             </div>
         </div>
     </header>
+    <main>
+        <section id="banner">
+            <div class="banner-container">
+                <div class="banner-content">
+                     <div class="banner-image">
+                        <img src="image/banner-image.png" alt="">
+                     </div>
+                     <div class="banner-text">
+                        <h1>"In the near future, I hope to become a Developer."</h1>
+                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <div class="banner-btn">
+                            <a href="#">Contact with me</a>
+                        </div>
+                     </div>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
