--- a/index.html
+++ b/index.html
@@ -38,6 +38,51 @@
                 </div>
             </div>
         </section>
+        <!-- banner part end -->
+         <!-- development part start -->
+          <section id="web">
+            <div class="container">
+                <div class="web-container">
+                    <div class="web-header">
+                        <h2 class="section-title">Why Web Development??</h2>
+                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    </div>
+                    <div class="web-content">
+                        <div class="content-item">
+                            <div class="item-text">
+                                <h3 class="web-content-title">I will Do Coding and <span style="display: block;">Change The World</span></h3>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button>Learn More</button>
+                            </div>
+                            <div class="item-image">
+                                <img src="image/Layer_1.png" alt="">
+                            </div>
+                        </div>
+                        <div class="content-item">
+                            <div class="item-image">
+                                <img src="image/Layer_2.png" alt="">
+                            </div>
+                            <div class="item-text">
+                                <h3 class="web-content-title">I will help People by creating Modern Web System</h3>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button>Learn More</button>
+                            </div>
+                        </div>
+                        <div class="content-item">
+                            <div class="item-text">
+                                <h3 class="web-content-title">I will Do Coding and <span style="display: block;">Change The World</span></h3>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <button>Learn More</button>
+                            </div>
+                            <div class="item-image">
+                                <img src="image/Layer_3.png" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+         <!-- development part end -->
     </main>
 </body>
 </html>
