inspiration part added

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
         </section>
         <!-- banner part end -->
-         <!-- development part start -->
+         <!-- web part start -->
           <section id="web">
             <div class="container">
                 <div class="web-container">
@@ -82,7 +82,22 @@
                 </div>
             </div>
           </section>
-         <!-- development part end -->
+         <!-- web part end -->
+          <!-- inspiration part start -->
+           <section id="inspiration">
+            <div class="container">
+                <div class="inspiration-container">
+                    <div class="inspiration-text">
+                        <h2 class="section-title">My Inspiration</h2>
+                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    </div>
+                    <div class="inspiration-video">
+                        <iframe width="70%" height="100%" src="https://www.youtube.com/embed/zFcS4CAFfLA?si=GPoIya2kQhn9AiEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+           </section>
+            <!-- inspiration part end -->
     </main>
 </body>
 </html>
