current target part added

--- a/index.html
+++ b/index.html
@@ -97,7 +97,57 @@
                 </div>
             </div>
            </section>
-            <!-- inspiration part end -->
+        <!-- inspiration part end -->
+         <!-- current target part start -->
+          <section id="current-target">
+            <div class="container">
+                <div class="ct-container">
+                    <div class="ct-header">
+                        <h2 class="section-title">My Current Target</h2>
+                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    </div>
+                    <div class="ct-content">
+                        <div class="ct-item">
+                            <div class="ct-icon">
+                                <img src="image/html.png" alt="">
+                            </div>
+                            <div class="ct-text">
+                                <h4>HTML</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <div class="ct-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ct-item">
+                            <div class="ct-icon">
+                                <img src="image/css.png" alt="">
+                            </div>
+                            <div class="ct-text">
+                                <h4>CSS</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <div class="ct-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="ct-item">
+                            <div class="ct-icon">
+                                <img src="image/js.png" alt="">
+                            </div>
+                            <div class="ct-text">
+                                <h4>JAVASCRIPT</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <div class="ct-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+          </section>
+         <!-- current target part end -->
     </main>
 </body>
 </html>
