--- a/index.html
+++ b/index.html
@@ -148,6 +148,56 @@
             </div>
           </section>
          <!-- current target part end -->
+        <!-- next target part start -->
+        <section id="next-target">
+            <div class="container">
+                <div class="next-container">
+                    <div class="next-header">
+                        <h2 class="section-title">My Next Target</h2>
+                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                    </div>
+                    <div class="next-content">
+                        <div class="next-item">
+                            <div class="next-icon">
+                                <img src="image/react.png" alt="">
+                            </div>
+                            <div class="next-text">
+                                <h4>React JS</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <div class="next-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="next-item">
+                            <div class="next-icon">
+                                <img src="image/nodejs.png" alt="">
+                            </div>
+                            <div class="next-text">
+                                <h4>Node JS</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <div class="next-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="next-item">
+                            <div class="next-icon">
+                                <img src="image/mongodb.png" alt="">
+                            </div>
+                            <div class="next-text">
+                                <h4>MongoDB</h4>
+                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <div class="next-btn">
+                                    <a href="#">Learn More</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- next target part end -->
     </main>
 </body>
 </html>
