support part added

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <h1>"In the near future, I hope to become a Developer."</h1>
                         <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
                         <div class="banner-btn">
-                            <a href="#">Contact with me</a>
+                            <a href="#support">Contact with me</a>
                         </div>
                      </div>
                 </div>
@@ -198,6 +198,24 @@
             </div>
         </section>
         <!-- next target part end -->
+        <!-- support part start -->
+         <section id="support">
+            <div class="container">
+                <div class="support-container">
+                    <div class="support-content">
+                        <div class="support-text">
+                            <h2 class="section=title" style="color: #ffffff;">I need Support</h2>
+                            <p class="section-description" style="color: #ffffff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <form>
+                                <input type="email" name="" id="" placeholder="Suggest me any feedback for me">
+                                <button>submit</button>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+            </div>
+         </section>
+        <!-- support part end -->
     </main>
 </body>
 </html>
