footer part added

--- a/index.html
+++ b/index.html
@@ -217,5 +217,25 @@
          </section>
         <!-- support part end -->
     </main>
+    <!-- footer part start -->
+     <footer>
+        <div class="footer-container">
+            <div class="container">
+                <div class="footer-content">
+                    <div class="footer-text">
+                        <span>An Open Commitment by Hasibur Rahman.B</span>
+                    </div>
+                    <div class="footer-social">
+                        <ul>
+                            <li><a href="https://www.facebook.com/" target="_blank"><img src="image/facebook.png" alt=""></a></li>
+                            <li><a href="https://github.com/" target="_blank"><img src="image/github.png" alt=""></a></li>
+                            <li><a href="https://bd.linkedin.com/" target="_blank"><img src="image/linkedin-icon 1.png" alt=""></a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+     </footer>
+    <!-- footer part end -->
 </body>
 </html>
