mofidy all lorem ispum text

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                      </div>
                      <div class="banner-text">
                         <h1>"In the near future, I hope to become a Developer."</h1>
-                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section-description">Hi, I am Hasibur Rahman B. I have been trying to become a web Developer. In the future I will create a specialize in crafting beautiful and functional websites with a keen eye for users experience</p>
                         <div class="banner-btn">
                             <a href="#support">Contact with me</a>
                         </div>
@@ -45,13 +45,13 @@
                 <div class="web-container">
                     <div class="web-header">
                         <h2 class="section-title">Why Web Development??</h2>
-                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section-description">First of all I like coding. Ever since I used to visit various websites, I had a wish that one day I would also create a professional website. So form there come to web development</p>
                     </div>
                     <div class="web-content">
                         <div class="content-item">
                             <div class="item-text">
                                 <h3 class="web-content-title">I will Do Coding and <span style="display: block;">Change The World</span></h3>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <p class="section-description">I will do coding and change the world with dedication. Each website will be more attractive and will play a role in fulfilling the needs of the users.</p>
                                 <button>Learn More</button>
                             </div>
                             <div class="item-image">
@@ -64,14 +64,14 @@
                             </div>
                             <div class="item-text">
                                 <h3 class="web-content-title">I will help People by creating Modern Web System</h3>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <p class="section-description">I will help the people by creating modern web system, crafting tools the are both strong and  agile.</p>
                                 <button>Learn More</button>
                             </div>
                         </div>
                         <div class="content-item">
                             <div class="item-text">
                                 <h3 class="web-content-title">I will Do Coding and <span style="display: block;">Change The World</span></h3>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                                <p class="section-description">I will do coding and change the world with dedication. Each website's will be more attractive and will play a role in fulfilling the needs of the users</p>
                                 <button>Learn More</button>
                             </div>
                             <div class="item-image">
@@ -89,10 +89,10 @@
                 <div class="inspiration-container">
                     <div class="inspiration-text">
                         <h2 class="section-title">My Inspiration</h2>
-                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section-description">I always follow Jankar Mahhabub Bhaiyya. I have heard many stories about my brother becoming a programmer. And get inspiration from there.</p>
                     </div>
                     <div class="inspiration-video">
-                        <iframe width="70%" height="100%" src="https://www.youtube.com/embed/zFcS4CAFfLA?si=GPoIya2kQhn9AiEQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                        <iframe width="70%" height="100%" src="https://www.youtube.com/embed/b6FdqRrrMlQ?si=OBDp7tV0z1DR0bmo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 <div class="ct-container">
                     <div class="ct-header">
                         <h2 class="section-title">My Current Target</h2>
-                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section-description">My aim now is to master the basic concepts of html, css and javascript and try ot understand the fundamentals.</p>
                     </div>
                     <div class="ct-content">
                         <div class="ct-item">
@@ -113,9 +113,9 @@
                             </div>
                             <div class="ct-text">
                                 <h4>HTML</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <p class="section-description">(Hyper Text Markup Language) is the standard markup language for documents designed to be displayed in a web brower.  </p>
                                 <div class="ct-btn">
-                                    <a href="#">Learn More</a>
+                                    <a href="https://en.wikipedia.org/wiki/HTML " target="_blank">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -125,9 +125,9 @@
                             </div>
                             <div class="ct-text">
                                 <h4>CSS</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <p class="section-description">Cascading style sheets(css). It is create mainly for designing web pages and designed to enable the separation of content and presentation. </p>
                                 <div class="ct-btn">
-                                    <a href="#">Learn More</a>
+                                    <a href="https://en.wikipedia.org/wiki/CSS" target="_blank">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -137,9 +137,9 @@
                             </div>
                             <div class="ct-text">
                                 <h4>JAVASCRIPT</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                                <p class="section-description">JavaScript is a high-level object oriented programming language. JS was created by Brendan Eich in 1995.</p>
                                 <div class="ct-btn">
-                                    <a href="#">Learn More</a>
+                                    <a href="https://en.wikipedia.org/wiki/JS" target="_blank">Learn More</a>
                                 </div>
                             </div>
                         </div>
@@ -154,7 +154,7 @@
                 <div class="next-container">
                     <div class="next-header">
                         <h2 class="section-title">My Next Target</h2>
-                        <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                        <p class="section-description">My next goal is to gain a good understanding of React js, Node js, and MongoDB , and to learn about their fundamentals.</p>
                     </div>
                     <div class="next-content">
                         <div class="next-item">
@@ -163,7 +163,7 @@
                             </div>
                             <div class="next-text">
                                 <h4>React JS</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <p class="section-description">React js is a free and open source front-end javaScript library. Release may 29, 2013 and Js author Jordan Walke</p>
                                 <div class="next-btn">
                                     <a href="#">Learn More</a>
                                 </div>
@@ -175,7 +175,7 @@
                             </div>
                             <div class="next-text">
                                 <h4>Node JS</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <p class="section-description">Node.js allows the creation of web servers and networking tools using javaScript and a collection of dodules the handle various core functionalities</p>
                                 <div class="next-btn">
                                     <a href="#">Learn More</a>
                                 </div>
@@ -187,7 +187,7 @@
                             </div>
                             <div class="next-text">
                                 <h4>MongoDB</h4>
-                                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text..</p>
+                                <p class="section-description">MongoDB is a source available cross platform document oriented database program . Realease February 11 , 2009</p>
                                 <div class="next-btn">
                                     <a href="#">Learn More</a>
                                 </div>
@@ -205,7 +205,7 @@
                     <div class="support-content">
                         <div class="support-text">
                             <h2 class="section=title" style="color: #ffffff;">I need Support</h2>
-                            <p class="section-description" style="color: #ffffff;">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                            <p class="section-description" style="color: #ffffff;">I need Programming hero community support to become a web developer </p>
                             <form>
                                 <input type="email" name="" id="" placeholder="Suggest me any feedback for me">
                                 <button>submit</button>
